  (Sébastien Briais, review by Gabriel Scherer and Nicolás Ojeda Bär)

- #9561: Unbox Unix.gettimeofday and Unix.time
  (Stephen Dolan, review by David Allsopp)

- #9570: Provide an Atomic module with a trivial purely-sequential
  implementation, to help write code that is compatible with Multicore
  OCaml.
  (Gabriel Scherer, review by Xavier Leroy)

- #9571: Make at_exit and Printexc.register_printer thread-safe.
  (Guillaume Munch-Maccagnoni, review by Gabriel Scherer and Xavier Leroy)

- #9066: a new Either module with
  type 'a Either.t = Left of 'a | Right of 'b
  (Gabriel Scherer, review by Daniel Bünzli, Thomas Refis, Jeremy Yallop)

- #9066: List.partition_map :
    ('a -> ('b, 'c) Either.t) -> 'a list -> 'b list * 'c list
  (Gabriel Scherer, review by Jeremy Yallop)

- #9587: Arg: new Rest_all spec to get all rest arguments in a list
  (this is similar to Rest, but makes it possible to detect when there
   are no arguments (an empty list) after the rest marker)
  (Gabriel Scherer, review by Nicolás Ojeda Bär and David Allsopp)

- #9655: Obj: introduce type raw_data and functions raw_field, set_raw_field
   to manipulate out-of-heap pointers in no-naked-pointer mode,
   and more generally all other data that is not a well-formed OCaml value
   (Xavier Leroy, review by Damien Doligez and Gabriel Scherer)

- #9533: Added String.starts_with and String.ends_with.
  (Bernhard Schommer, review by Daniel Bünzli, Gabriel Scherer and
  Alain Frisch)

- #9663: Extend Printexc API for raw backtrace entries.
  (Stephen Dolan, review by Nicolás Ojeda Bär and Gabriel Scherer)

* #9668: List.equal, List.compare
  (This could break code using "open List" by shadowing
   Stdlib.{equal,compare}.)
  (Gabriel Scherer, review by Nicolás Ojeda Bär, Daniel Bünzli and Alain Frisch)

- #9763: Add function Hashtbl.rebuild to convert from old hash table
  formats (that may have been saved to persistent storage) to the